feat: add debug log ,add retry condition, add build task