@@ -284,11 +284,10 @@ jar {
 	}
 }
 
-task buildBinary {
+task copyJarToBinaryDir {
 	dependsOn jar
 	def buildBinaryDir = "build/binary"
-	def out = new ByteArrayOutputStream()
-	doFirst {
+	doLast {
 		new File(buildBinaryDir).mkdirs()
 		copy {
 			from "build/libs/${project.name}-${project.version}.jar"
@@ -296,6 +295,12 @@ task buildBinary {
 			rename "${project.name}-${project.version}.jar", "${project.name}.jar"
 		}
 	}
+}
+
+task buildBinary {
+	dependsOn copyJarToBinaryDir
+	def buildBinaryDir = "build/binary"
+	def out = new ByteArrayOutputStream()
 	doLast {
 		exec {
 			workingDir buildBinaryDir
@@ -307,18 +312,25 @@ task buildBinary {
 	println(out.toString())
 }
 
-task buildBinaryStatic {
-	dependsOn jar
+task buildBinaryStaticNoG1GC {
+	dependsOn copyJarToBinaryDir
 	def buildBinaryDir = "build/binary"
 	def out = new ByteArrayOutputStream()
-	doFirst {
-		new File(buildBinaryDir).mkdirs()
-		copy {
-			from "build/libs/${project.name}-${project.version}.jar"
-			into buildBinaryDir
-			rename "${project.name}-${project.version}.jar", "${project.name}.jar"
+	doLast {
+		exec {
+			workingDir buildBinaryDir
+			executable "sh"
+			args "-c", "native-image -jar ${project.name}.jar --static --libc=musl --no-fallback --enable-http --enable-https --enable-preview --add-modules jdk.incubator.concurrent -H:EnableURLProtocols=http,https  --initialize-at-build-time=org.slf4j.LoggerFactory,ch.qos.logback.core.CoreConstants,ch.qos.logback.core.util.Loader,ch.qos.logback.core.util.StatusPrinter,ch.qos.logback.core.status.InfoStatus,ch.qos.logback.classic.Logger,ch.qos.logback.core.rolling.helper.FileNamePattern,ch.qos.logback.classic.Level,ch.qos.logback.core.status.StatusBase,io.opentelemetry.api.trace.ArrayBasedTraceStateBuilder,io.opentelemetry.context.LazyStorage,ch.qos.logback.core.util.FileSize,ch.qos.logback.core.rolling.helper.RollingCalendar,io.opentelemetry.api.internal.ImmutableSpanContext,io.opentelemetry.api.internal.OtelEncodingUtils,ch.qos.logback.classic.PatternLayout,io.opentelemetry.context.ThreadLocalContextStorage,io.opentelemetry.api.trace.PropagatedSpan,io.opentelemetry.context.ContextStorageWrappers,ch.qos.logback.core.rolling.helper.Compressor\$1,io.opentelemetry.api.trace.ImmutableTraceFlags,ch.qos.logback.core.rolling.helper.RollingCalendar\$1,ch.qos.logback.classic.model.ConfigurationModel,ch.qos.logback.core.model.processor.DefaultProcessor\$1,ch.qos.logback.core.model.processor.ImplicitModelHandler\$1,ch.qos.logback.core.subst.Token,ch.qos.logback.core.pattern.parser.Parser,ch.qos.logback.core.subst.Parser\$1,ch.qos.logback.core.util.Duration,ch.qos.logback.core.model.processor.ChainedModelFilter\$1,ch.qos.logback.classic.model.processor.ConfigurationModelHandler,ch.qos.logback.classic.model.processor.LogbackClassicDefaultNestedComponentRules,ch.qos.logback.core.subst.NodeToStringTransformer\$1,ch.qos.logback.core.pattern.parser.TokenStream\$1,ch.qos.logback.core.subst.Tokenizer\$1 --initialize-at-run-time=io.netty.channel.AbstractChannel,io.netty.channel.socket.nio.SelectorProviderUtil,io.netty.util.concurrent.DefaultPromise,io.netty,org.slf4j.MDC,org.github.gestalt.config ${project.name}"
+			standardOutput out
 		}
 	}
+	println(out.toString())
+}
+
+task buildBinaryStatic {
+	dependsOn copyJarToBinaryDir
+	def buildBinaryDir = "build/binary"
+	def out = new ByteArrayOutputStream()
 	doLast {
 		exec {
 			workingDir buildBinaryDir
@@ -331,17 +343,9 @@ task buildBinaryStatic {
 }
 
 task buildBinaryG1GC {
-	dependsOn jar
+	dependsOn copyJarToBinaryDir
 	def buildBinaryDir = "build/binary"
 	def out = new ByteArrayOutputStream()
-	doFirst {
-		new File(buildBinaryDir).mkdirs()
-		copy {
-			from "build/libs/${project.name}-${project.version}.jar"
-			into buildBinaryDir
-			rename "${project.name}-${project.version}.jar", "${project.name}.jar"
-		}
-	}
 	doLast {
 		exec {
 			workingDir buildBinaryDir
